# Ct-Homework

./: .gitignore
arch/hw2/: alu.v  alu_test.v  control_unit.v  cpu_test.v  mem_test.v  memory.v  mips_cpu.v  register_file.v
digital-culture/: grep-logs.bash  wget-pdfs
digital-culture/make/: pom.xml
digital-culture/test-maven/: pom.xml
dm/lab1/: C.java  G.java  H.java
dm/lab2/: B.java  E.java  F.java  H.py
dm/lab3/: Eight.java  Eleven.java  Five.java  Fiveteen.java  Four.java  Fourteen.java  Nine.java  One.java  Seven.java  Six.java  Sixteen.java  Sixten.py  Ten.java  Thirteen.java  Three.java  Twelve.java  TwentyThree.java  Two.java
prog-intro/hw/: MyScanner.java  Reverse.java  ReverseAbc2.java  ReverseOdd2.java  Sum.java  WordStatInput.java  WordStatWords.java  WsppPosition.java
prog-intro/hw/expression/: Add.java  Const.java  MiddleSymbolException.java  Subtract.java  Variable.java  package-info.java
prog-intro/hw/game/: GameResult.java  HumanPlayer.java  MNKBoard.java  Match.java  Move.java  TwoPlayerGame.java
prog-intro/hw/markdown/: Emphasis.java  MarkdownClass.java  MarkdownElement.java  Paragraph.java  Strikeout.java  Strong.java  Text.java
prog-intro/hw/markup/: Emphasis.java  MarkdownClass.java  MarkdownElement.java  Strikeout.java  Strong.java  Text.java
prog-intro/hw/md2html/: Md2Html.java
prog-intro/hw/scanner/: MyScanner.java
prog-intro/hw/sum/: SumTester.java
sem1/arch/hw2/: a.out  alu.v  (+4 more)
sem1/digital-culture/: bc  config.ovpn  find-exe  mod-sort  phone-numbers.bash  tmp  word-count
sem2/cpp/lab2/: CMakeLists.txt  main.c
(+196 files in other folders)
